...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Add View Controller-->
        <scene sceneID="4Bz-g7-pUo">
            <objects>
                <viewController storyboardIdentifier="AddViewController" id="8cA-A7-8WR" customClass="AddViewController" customModule="Inventory" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="F0D-hJ-uk3">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="606-ep-Co7" userLabel="Add Stack View">
                                <rect key="frame" x="16" y="60" width="382" height="170"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gP2-2H-glw" userLabel="Add Short Description">
                                        <rect key="frame" x="0.0" y="0.0" width="382" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="addShortDescription">
                                            <accessibilityTraits key="traits" none="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="EYO-Ox-Zpf">
...
